<resources>
    <string name="app_name">记录保质期</string>

    <string name="tab_main">首页</string>
    <string name="tab_calendar">日历</string>
    <string name="tab_setting">设置</string>
    <string name="list">列表</string>
    <string name="add">新增</string>
    <string name="save">保存</string>
    <string name="required">必填</string>
    <string name="optional">选填</string>
    <string name="id">物品ID</string>
    <string name="item_info">物品信息</string>
    <string name="name">名称</string>
    <string name="number">数量</string>
    <string name="remark">备注</string>
    <string name="sort_id">分类ID</string>
    <string name="sort">分类</string>
    <string name="status">状态</string>
    <string name="add_date">添加日期</string>
    <string name="production_date">生产日期</string>
    <string name="production_date_format">生产日期:%s</string>
    <string name="shelf_life">保质天数</string>
    <string name="shelf_life_remain">保质天数还有</string>
    <string name="expiration_date">过期日期</string>
    <string name="expiration_date_format">过期日期:%s</string>
    <string name="date_format">%d-%d-%d</string>
    <string name="day_format">%d天</string>
    <string name="input_days">输入天数</string>
    <string name="date_type">过期计算方式</string>
    <string name="unavailable_now">功能暂不可用</string>
    <string name="date_error">日期异常</string>
    <string name="remark_null">暂无描述</string>
    <string name="name_cannot_null">名称不能为空</string>
    <string name="num_cannot_null">数量不能为空</string>
    <string name="time_cannot_null">请输入保质天数</string>
    <string name="time_cannot_null2">请选择保质日期</string>
    <string name="input_time_wrong">输入保质天数有误</string>
    <string name="add_success">添加成功</string>
    <string name="save_success">保存成功</string>
    <string name="expired">已过期</string>
    <string name="not_expired">未过期</string>
    <string name="item_detail">物品详情</string>
    <string name="edit">编辑</string>
    <string name="delete">删除</string>
    <string name="delete_confirm_msg">确认删除"%s"？</string>
    <string name="delete_all_confirm_msg">删除后无法恢复！！！\n确认删除所有数据？</string>
    <string name="delete_success">删除成功</string>
    <string name="sure">确认</string>
    <string name="cancel">取消</string>
    <string name="clear_all">清除所有数据</string>
    <string name="save_to_excel">导出至EXCEL文件</string>
    <string name="save_to_excel_confirm">确认导出数据？</string>
    <string name="save_to_excel_success">导出成功</string>
    <string name="save_to_excel_no_data">暂无数据，先去添加再导出吧！</string>
    <string name="no_data">暂无数据</string>
    <string name="search_input_hint">输入搜索内容</string>
    <string name="search_input_null">搜索内容不能为空</string>
</resources>