<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <variable
            name="bean"
            type="com.meng.expirationdate.room.ItemInfo" />

        <import type="com.meng.expirationdate.utils.MyStringUtils"/>
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="280dp"
        android:layout_height="370dp"
        android:orientation="vertical"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:paddingTop="15dp"
        android:paddingBottom="15dp"
        app:bl_corners_radius="12dp"
        app:bl_solid_color="@color/white">
        <TextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/item_detail"
            android:textSize="18sp"
            android:textColor="@color/text_black"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:overScrollMode="never"
            app:layout_constraintTop_toBottomOf="@id/tv_title">
            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:id="@+id/tv_title_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/name"
                    android:textColor="@color/text_gray"
                    android:textSize="14sp"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"/>

                <TextView
                    android:id="@+id/tv_item_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:text="@{bean.itemName}"
                    android:textColor="@color/text_black"
                    android:textSize="14sp"
                    app:layout_constraintTop_toTopOf="@id/tv_title_name"
                    app:layout_constraintStart_toEndOf="@id/tv_title_name"/>

                <TextView
                    android:id="@+id/tv_title_num"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:text="@string/number"
                    android:textColor="@color/text_gray"
                    android:textSize="14sp"
                    app:layout_constraintTop_toBottomOf="@+id/tv_title_name"
                    app:layout_constraintStart_toStartOf="parent"/>

                <TextView
                    android:id="@+id/tv_item_num"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:text="@{bean.itemNum + ``}"
                    android:textColor="@color/text_black"
                    android:textSize="14sp"
                    app:layout_constraintTop_toTopOf="@id/tv_title_num"
                    app:layout_constraintStart_toEndOf="@id/tv_title_num"/>

                <TextView
                    android:id="@+id/tv_title_status"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:text="@string/status"
                    android:textColor="@color/text_gray"
                    android:textSize="14sp"
                    app:layout_constraintTop_toBottomOf="@+id/tv_title_num"
                    app:layout_constraintStart_toStartOf="parent"/>

                <TextView
                    android:id="@+id/tv_item_status"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:text="@{MyStringUtils.getTimeComparedResult(bean.itemExpirationDate)}"
                    android:textColor="@{(MyStringUtils.compareTime(bean.itemExpirationDate)==true) ? @color/wrong_red : @color/right_green,default=@color/right_green}"
                    android:textSize="14sp"
                    app:layout_constraintTop_toTopOf="@id/tv_title_status"
                    app:layout_constraintStart_toEndOf="@id/tv_title_status"/>

                <ImageView
                    android:id="@+id/iv_item_status"
                    android:layout_width="14dp"
                    android:layout_height="14dp"
                    android:layout_marginStart="5dp"
                    android:src="@{(MyStringUtils.compareTime(bean.itemExpirationDate)==true) ? @drawable/icon_wrong : @drawable/icon_right,default=@drawable/icon_right}"
                    app:layout_constraintStart_toEndOf="@id/tv_item_status"
                    app:layout_constraintTop_toTopOf="@id/tv_item_status"
                    app:layout_constraintBottom_toBottomOf="@id/tv_item_status"/>

                <TextView
                    android:id="@+id/tv_title_remark"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:text="@string/remark"
                    android:textColor="@color/text_gray"
                    android:textSize="14sp"
                    app:layout_constraintTop_toBottomOf="@+id/tv_title_status"
                    app:layout_constraintStart_toStartOf="parent"/>

                <TextView
                    android:id="@+id/tv_item_remark"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:text="@{MyStringUtils.getRemark(bean.itemDescription)}"
                    android:textColor="@color/text_black"
                    android:textSize="14sp"
                    app:layout_constraintTop_toTopOf="@id/tv_title_remark"
                    app:layout_constraintStart_toEndOf="@id/tv_title_remark"/>

                <TextView
                    android:id="@+id/tv_title_sort"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:text="@string/sort"
                    android:textColor="@color/text_gray"
                    android:textSize="14sp"
                    app:layout_constraintTop_toBottomOf="@+id/tv_item_remark"
                    app:layout_constraintStart_toStartOf="parent"/>

                <TextView
                    android:id="@+id/tv_item_sort"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:text="@{MyStringUtils.getItemType(bean.itemType)}"
                    android:textColor="@color/text_black"
                    android:textSize="14sp"
                    app:layout_constraintTop_toTopOf="@id/tv_title_sort"
                    app:layout_constraintStart_toEndOf="@id/tv_title_sort"/>

                <TextView
                    android:id="@+id/tv_title_add_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:text="@string/add_date"
                    android:textColor="@color/text_gray"
                    android:textSize="14sp"
                    app:layout_constraintTop_toBottomOf="@+id/tv_title_sort"
                    app:layout_constraintStart_toStartOf="parent"/>

                <TextView
                    android:id="@+id/tv_item_add_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:text="@{MyStringUtils.getDateByTime(bean.itemId)}"
                    android:textColor="@color/text_black"
                    android:textSize="14sp"
                    app:layout_constraintTop_toTopOf="@id/tv_title_add_date"
                    app:layout_constraintStart_toEndOf="@id/tv_title_add_date"/>

                <TextView
                    android:id="@+id/tv_title_production_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:text="@string/production_date"
                    android:textColor="@color/text_gray"
                    android:textSize="14sp"
                    app:layout_constraintTop_toBottomOf="@+id/tv_title_add_date"
                    app:layout_constraintStart_toStartOf="parent"/>

                <TextView
                    android:id="@+id/tv_item_production_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:text="@{bean.itemProductionDate}"
                    android:textColor="@color/text_black"
                    android:textSize="14sp"
                    app:layout_constraintTop_toTopOf="@id/tv_title_production_date"
                    app:layout_constraintStart_toEndOf="@id/tv_title_production_date"/>

                <TextView
                    android:id="@+id/tv_title_expiration_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:text="@string/expiration_date"
                    android:textColor="@color/text_gray"
                    android:textSize="14sp"
                    app:layout_constraintTop_toBottomOf="@+id/tv_title_production_date"
                    app:layout_constraintStart_toStartOf="parent"/>

                <TextView
                    android:id="@+id/tv_item_expiration_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:text="@{bean.itemExpirationDate}"
                    android:textColor="@color/text_black"
                    android:textSize="14sp"
                    app:layout_constraintTop_toTopOf="@id/tv_title_expiration_date"
                    app:layout_constraintStart_toEndOf="@id/tv_title_expiration_date"/>
            </androidx.constraintlayout.widget.ConstraintLayout>
        </ScrollView>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>