<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="vm"
            type="com.meng.expirationdate.viewmodel.AddItemViewModel" />

        <import type="com.meng.expirationdate.utils.MyStringUtils"/>
        <import type="android.view.View"/>
    </data>
    
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <ImageView
            android:id="@+id/iv_back"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@mipmap/back"
            android:padding="10dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add"
            android:textColor="@color/text_black"
            android:textSize="17sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/iv_back"
            app:layout_constraintBottom_toBottomOf="@id/iv_back"/>

        <TextView
            android:id="@+id/tv_save"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:gravity="center_vertical|end"
            android:layout_marginEnd="10dp"
            android:text="@string/save"
            android:textColor="@color/text_black"
            android:textSize="14sp"
            app:layout_constraintTop_toTopOf="@id/tv_title"
            app:layout_constraintBottom_toBottomOf="@id/tv_title"
            app:layout_constraintEnd_toEndOf="parent" />

        <View
            android:id="@+id/view_bg"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="40dp"
            android:background="@color/bg_color_grey"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            app:layout_constraintTop_toTopOf="@id/view_bg"
            android:background="@color/line_color_50"/>

        <View
            android:id="@+id/view_bg_item"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="@id/view_bg"
            android:layout_marginTop="20dp"
            android:background="@color/white"/>

        <RelativeLayout
            android:id="@+id/rl_name"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="20dp"
            android:paddingStart="10dp"
            app:layout_constraintTop_toTopOf="@id/view_bg">
            <ImageView
                android:id="@+id/iv_item_name"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_centerVertical="true"
                android:src="@mipmap/item_name"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@id/iv_item_name"
                android:layout_marginStart="5dp"
                android:includeFontPadding="false"
                android:layout_centerVertical="true"
                android:text="@string/name"
                android:textColor="@color/text_gray"
                android:textSize="14sp"/>

            <EditText
                android:id="@+id/et_item_name"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginStart="100dp"
                android:background="@null"
                android:gravity="center_vertical"
                android:hint="@string/required"
                android:singleLine="true"
                android:textColor="@color/text_black"
                android:textColorHint="@color/text_gray"
                android:textSize="14sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_alignParentBottom="true"
                android:layout_alignStart="@id/iv_item_name"
                android:background="@color/line_color_50" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rl_num"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:paddingStart="10dp"
            app:layout_constraintTop_toBottomOf="@id/rl_name">
            <ImageView
                android:id="@+id/iv_item_num"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_centerVertical="true"
                android:src="@mipmap/item_num"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@id/iv_item_num"
                android:layout_marginStart="5dp"
                android:includeFontPadding="false"
                android:layout_centerVertical="true"
                android:text="@string/number"
                android:textColor="@color/text_gray"
                android:textSize="14sp"/>

            <EditText
                android:id="@+id/et_item_num"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginStart="100dp"
                android:background="@null"
                android:gravity="center_vertical"
                android:hint="@string/required"
                android:inputType="number"
                android:singleLine="true"
                android:textColor="@color/text_black"
                android:textColorHint="@color/text_gray"
                android:textSize="14sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_alignParentBottom="true"
                android:layout_alignStart="@id/iv_item_num"
                android:background="@color/line_color_50" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rl_remark"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:paddingStart="10dp"
            app:layout_constraintTop_toBottomOf="@id/rl_num">

            <ImageView
                android:id="@+id/iv_item_remark"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_centerVertical="true"
                android:src="@mipmap/item_remark" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@id/iv_item_remark"
                android:layout_marginStart="5dp"
                android:includeFontPadding="false"
                android:layout_centerVertical="true"
                android:text="@string/remark"
                android:textColor="@color/text_gray"
                android:textSize="14sp"/>

            <EditText
                android:id="@+id/et_item_remark"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginStart="100dp"
                android:layout_marginEnd="10dp"
                android:background="@null"
                android:gravity="center_vertical"
                android:hint="@string/optional"
                android:singleLine="true"
                android:textColor="@color/text_black"
                android:textColorHint="@color/text_gray"
                android:textSize="14sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_alignParentBottom="true"
                android:layout_alignStart="@id/iv_item_remark"
                android:background="@color/line_color_50" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rl_sort"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:paddingStart="10dp"
            app:layout_constraintTop_toBottomOf="@id/rl_remark">

            <ImageView
                android:id="@+id/iv_item_sort"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_centerVertical="true"
                android:padding="1dp"
                android:src="@mipmap/item_sort" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@id/iv_item_sort"
                android:layout_marginStart="5dp"
                android:includeFontPadding="false"
                android:layout_centerVertical="true"
                android:text="@string/sort"
                android:textColor="@color/text_gray"
                android:textSize="14sp"/>

            <TextView
                android:id="@+id/et_item_sort"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginStart="100dp"
                android:gravity="center_vertical"
                android:text="@string/unavailable_now"
                android:singleLine="true"
                android:textColor="@color/text_black"
                android:textSize="14sp" />

            <ImageView
                android:layout_width="15dp"
                android:layout_height="15dp"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="10dp"
                android:src="@mipmap/right_arrow" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_alignParentBottom="true"
                android:layout_alignStart="@id/iv_item_sort"
                android:background="@color/line_color_50" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rl_date"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:paddingStart="10dp"
            app:layout_constraintTop_toBottomOf="@id/rl_sort">

            <ImageView
                android:id="@+id/iv_item_date"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_centerVertical="true"
                android:src="@mipmap/item_date" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginStart="5dp"
                android:layout_toEndOf="@id/iv_item_date"
                android:includeFontPadding="false"
                android:text="@string/production_date"
                android:textColor="@color/text_gray"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/tv_item_date"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginStart="100dp"
                android:gravity="center_vertical"
                android:textColor="@color/text_black"
                android:textSize="14sp"
                tools:text="2022-05-15" />

            <ImageView
                android:layout_width="15dp"
                android:layout_height="15dp"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="10dp"
                android:src="@mipmap/right_arrow" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_alignParentBottom="true"
                android:layout_alignStart="@id/iv_item_date"
                android:background="@color/line_color_50" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rl_date_type"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:paddingStart="10dp"
            app:layout_constraintTop_toBottomOf="@id/rl_date">

            <ImageView
                android:id="@+id/iv_item_date_type"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_centerVertical="true"
                android:src="@mipmap/item_date_type" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginStart="5dp"
                android:layout_toEndOf="@id/iv_item_date_type"
                android:includeFontPadding="false"
                android:text="@string/date_type"
                android:textColor="@color/text_gray"
                android:textSize="14sp" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginStart="140dp"
                android:padding="2dp"
                android:background="@drawable/gray_bg_3dp_conner">
                <TextView
                    android:id="@+id/tv_date_type0"
                    android:layout_width="90dp"
                    android:layout_height="25dp"
                    android:gravity="center"
                    android:text="保质天数"
                    android:textColor="@color/text_black"
                    android:textSize="12sp"
                    android:background="@{vm.dateType==0?@drawable/white_bg_3dp_conner:@drawable/transparent_bg}"/>

                <TextView
                    android:id="@+id/tv_date_type1"
                    android:layout_width="90dp"
                    android:layout_height="25dp"
                    android:gravity="center"
                    android:text="过期日期"
                    android:textColor="@color/text_black"
                    android:textSize="12sp"
                    android:background="@{vm.dateType!=0?@drawable/white_bg_3dp_conner:@drawable/transparent_bg}"/>
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_alignParentBottom="true"
                android:layout_alignStart="@id/iv_item_date_type"
                android:background="@color/line_color_50" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rl_time"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:paddingStart="10dp"
            app:layout_constraintTop_toBottomOf="@id/rl_date_type">

            <ImageView
                android:id="@+id/iv_item_time"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_centerVertical="true"
                android:padding="1dp"
                android:src="@mipmap/item_days" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginStart="5dp"
                android:layout_toEndOf="@id/iv_item_time"
                android:includeFontPadding="false"
                android:text="@{vm.dateType==0?@string/shelf_life:@string/expiration_date}"
                android:textColor="@color/text_gray"
                android:textSize="14sp"
                tools:text="@string/shelf_life"/>

            <TextView
                android:id="@+id/tv_item_time"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginStart="100dp"
                android:gravity="center_vertical"
                android:textColor="@color/text_black"
                android:textSize="14sp"
                android:visibility="@{vm.dateType==1?View.VISIBLE:View.GONE,default=gone}"
                tools:text="2022-07-29" />

            <EditText
                android:id="@+id/et_view_time"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginStart="100dp"
                android:gravity="center_vertical"
                android:hint="@string/input_days"
                android:singleLine="true"
                android:textColor="@color/text_black"
                android:textColorHint="@color/text_gray"
                android:textSize="14sp"
                android:inputType="number"
                android:background="@null"
                android:visibility="@{vm.dateType==0?View.VISIBLE:View.GONE}" />

            <ImageView
                android:layout_width="15dp"
                android:layout_height="15dp"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="10dp"
                android:src="@mipmap/right_arrow"
                android:visibility="@{vm.dateType==1?View.VISIBLE:View.INVISIBLE}"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_alignParentBottom="true"
                android:layout_alignStart="@id/iv_item_time"
                android:background="@color/line_color_50" />
        </RelativeLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>